--- a/L11_Doom_HUD/style.css
+++ b/L11_Doom_HUD/style.css
@@ -34,8 +34,9 @@ div#ammo {
     position: absolute;
     font-size: 50px;
     top: 92%;
-    left: 89%;
+    left: 82%;
     color: blue;
+    width: 30%
 
 }
 div#bottomblock {
